# clash-multiplatform-compat

./: .gitignore  .gitmodules  build.gradle.kts  settings.gradle.kts
.github/workflows/: publish.yaml
base/: build.gradle.kts
base/src/main/java/com/github/kr328/clash/compat/: Compat.java  CompatLibrary.java  ProcessCompat.java  ShellCompat.java  ThemeCompat.java  WindowCompat.java
jni/: build.gradle.kts
jni/src/main/cpp/: CMakeLists.txt  cleaner.h  dbus.hpp  jniutils.cpp  jniutils.hpp  main.c  main.cpp  os.hpp  os_linux.cpp  os_win32.cpp  process.c  process.cpp  process.h  process.hpp  process_linux.c  process_linux.cpp  process_win32.c  process_win32.cpp  shell.c  shell.cpp  shell.h  shell.hpp  shell_linux.cpp  shell_win32.c  shell_win32.cpp  theme.c  theme.cpp  theme.h  theme.hpp  theme_linux.c  theme_linux.cpp  theme_win32.c  theme_win32.cpp  utils.hpp  window.c  window.cpp  window.h  window.hpp  window_linux.c  window_linux.cpp  (+2 more)
